--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 80px;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -134,23 +136,12 @@ nav a:hover {
 
 .aboutinfo-holder h2 {
   font-size: 35px;
-  font-family: 'Montserrat', sans-serif;
   margin: 0;
-  color: #f43f5e;
+  color: #1e293b;
 }
 
 .aboutinfo-holder p {
   text-align: justify;
-}
-
-.about-holder a {
-  text-decoration: none;
-  color: #f1f5f9;
-  border: 2px solid #f43f5e;
-  border-radius: 10px;
-  background-color: #f43f5e;
-  padding: 0 20px;
-  text-align: center;
 }
 
 /* SKILLS SECTION */
@@ -285,6 +276,9 @@ button:hover {
     flex-direction: row;
     justify-content: space-between;
     height: auto;
+    margin: 0;
+    width: 100%;
+    overflow-x: hidden;
   }
 
   header h1 {
@@ -301,7 +295,7 @@ button:hover {
   }
 
   nav a {
-    font-size: 15px;
+    font-size: 10px;
     text-align: center;
   }
 
@@ -312,6 +306,9 @@ button:hover {
     justify-content: space-between;
     padding: 20px;
     gap: 20px;
+    margin: 20px;
+    width: fit-content;
+    align-self: center;
   }
   .image-holder {
     width: 100%;
@@ -321,34 +318,36 @@ button:hover {
   }
 
   .intro-holder h3 {
-    font-size: 25px;
+    font-size: 15px;
     gap: 0;
-    line-height: 25px;
+    line-height: 20px;
   }
 
   .intro-holder a {
-    font-size: 12px;
+    font-size: 15px;
     height: fit-content;
     padding: 0 8px;
     display: inline-block;
-    width: 100px;
+    width: 80px;
     text-align: center;
   }
+
 
   /* ABOUT */
   .about-holder {
     padding: 20px;
+    flex-direction: column;
   }
 
   .image2-holder {
-    width: 60%;
+    width: 100%;
   }
   .image2-holder img {
-    width: 100%;
+    width: 70%;
   }
 
   .aboutinfo-holder h2 {
-    font-size: 20px;
+    font-size: 25px;
   }
 
   .aboutinfo-holder p {
@@ -356,11 +355,19 @@ button:hover {
   }
 
   /* SKILLS */
+  .skills-holder {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+  }
+
   .skills-holder h1 {
-    font-size: 20px;
+    font-size: 15px;
   }
   .skills-holder div {
     font-size: 12px;
+    
   }
 
   /* SERVICES */
@@ -369,6 +376,10 @@ button:hover {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
+  }
+
+  .services-holder h1 {
+    font-size: 20px;
   }
 
   .services-holder div {
