--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ header {
 }
 
 header h1 {
-  font-size: larger;
+  font-size: 25px;
   color: white;
 }
 
@@ -39,7 +39,7 @@ nav {
 nav a {
   text-decoration: none;
   color: #f1f5f9;
-  font-size: small;
+  font-size: medium;
 }
 
 nav a:hover {
@@ -61,7 +61,7 @@ nav a:hover {
 }
 
 .image-holder img {
-  width: 300px;
+  width: 400px;
   border: 2px solid #f1f5f9;
   border-radius: 100%;
   background-color: #334155;
@@ -71,14 +71,14 @@ nav a:hover {
   display: flex;
   flex-direction: column;
   align-items: left;
-  line-height: 50px;
   justify-content: space-evenly;
   width: 100%;
 }
 
 .intro-holder h3 {
-  font-size: 35px;
+  font-size: 50px;
   font-family: 'Montserrat', sans-serif;
+  line-height: 60px;
 }
 
 .intro-holder h3 span {
@@ -116,11 +116,11 @@ nav a:hover {
 .image2-holder {
   display: flex;
   justify-content: center;
-  width: 30%;
+  width: 70%;
 }
 
 .image2-holder img {
-  width: 300px;
+  width: 400px;
   border: 2px solid #f1f5f9;
   border-radius: 20px;
   background-color: #334155;
@@ -135,18 +135,23 @@ nav a:hover {
 }
 
 .aboutinfo-holder h2 {
-  font-size: 35px;
+  font-size: 50px;
   margin: 0;
   color: #1e293b;
 }
 
 .aboutinfo-holder p {
   text-align: justify;
+  font-size: 20px;
 }
 
 /* SKILLS SECTION */
 .skills {
   margin: 10% 5%;
+}
+
+.skills h1 {
+  font-size: 40px;
 }
 
 .skills-holder {
@@ -162,7 +167,7 @@ nav a:hover {
   padding: 10px;
   text-align: center;
   border-radius: 8px;
-  font-size: small;
+  font-size: medium;
   transition: all 0.3s ease-in-out;
 }
 
@@ -179,6 +184,10 @@ nav a:hover {
   flex-direction: column;
 }
 
+.services h1 {
+  font-size: 40px;
+}
+
 .services-holder {
   display: flex;
   gap: 15px;
@@ -188,7 +197,7 @@ nav a:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-size: small;
+  font-size: medium;
   border: 1px solid #f1f5f9;
   padding: 10px;
   border-radius: 10px;
@@ -205,7 +214,7 @@ nav a:hover {
 
 /* CONTACT SECTION */
 .contact-holder {
-  margin: 15% 5% 10% 5%;
+  margin: 15% 5% 5% 5%;
   display: flex;
   flex-direction: row;
 }
@@ -217,6 +226,14 @@ nav a:hover {
   gap: 0;
 }
 
+.infos h1 {
+  font-size: 40px;
+}
+
+.infos p {
+  font-size: 20px;
+}
+
 .socmed-infos {
   display: flex;
   gap: 10px;
@@ -225,7 +242,7 @@ nav a:hover {
 }
 
 .socmed-infos a {
-  font-size: 30px;
+  font-size: 40px;
   text-decoration: none;
   color: #1e293b;
 }
@@ -252,6 +269,7 @@ form input, form textarea {
   border: none;
   outline: none;
   border-radius: 5px;
+  font-size: 20px;
 }
 
 button {
@@ -280,7 +298,6 @@ button:hover {
 
   header h1 {
     text-align: center;
-    color: red;
   }
 
   nav {
@@ -335,6 +352,7 @@ button:hover {
     margin: 10% 5%;
     flex-direction: column;
     padding: 0;
+    align-items: center;
   }
 
   .image2-holder {
@@ -346,7 +364,7 @@ button:hover {
 
   .aboutinfo-holder {
     width: 100%;
-    margin: auto;
+    
   }
 
   .aboutinfo-holder h2 {
@@ -443,15 +461,6 @@ button:hover {
     font-size: 40px;
     gap: 0;
     line-height: 40px;
-  }
-
-  .intro-holder a {
-    font-size: 15px;
-    height: fit-content;
-    padding: 0 8px;
-    display: inline-block;
-    width: 100px;
-    text-align: center;
   }
 
   /* ABOUT */
