--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ nav a:hover {
   margin: 10% 5%;
 }
 
-.skills h1 {
+.skills h2 {
   font-size: 40px;
 }
 
@@ -184,7 +184,7 @@ nav a:hover {
   flex-direction: column;
 }
 
-.services h1 {
+.services h2 {
   font-size: 40px;
 }
 
@@ -226,7 +226,7 @@ nav a:hover {
   gap: 0;
 }
 
-.infos h1 {
+.infos h2 {
   font-size: 40px;
 }
 
@@ -320,7 +320,7 @@ button:hover {
     justify-content: space-between;
     padding: 20px;
     gap: 20px;
-    margin: 20px;
+    margin: 20% 20px 20% 20px;
     width: fit-content;
     align-self: center;
   }
@@ -332,18 +332,9 @@ button:hover {
   }
 
   .intro-holder h3 {
-    font-size: 15px;
+    font-size: 20px;
     gap: 0;
-    line-height: 20px;
-  }
-
-  .intro-holder a {
-    font-size: 15px;
-    height: fit-content;
-    padding: 0 8px;
-    display: inline-block;
-    width: 80px;
-    text-align: center;
+    line-height: 25px;
   }
 
 
@@ -359,7 +350,8 @@ button:hover {
     width: 100%;
   }
   .image2-holder img {
-    width: 70%;
+    width: 30%;
+    border: 3px solid #1e293b;
   }
 
   .aboutinfo-holder {
@@ -383,12 +375,12 @@ button:hover {
     gap: 10px;
   }
 
-  .skills-holder h1 {
-    font-size: 15px;
+  .skills h2 {
+    font-size: 25px;
   }
+
   .skills-holder div {
     font-size: 12px;
-    
   }
 
   /* SERVICES */
@@ -399,8 +391,8 @@ button:hover {
     gap: 10px;
   }
 
-  .services-holder h1 {
-    font-size: 20px;
+  .services h2 {
+    font-size: 25px;
   }
 
   .services-holder div {
@@ -416,6 +408,10 @@ button:hover {
 
   .infos {
     line-height: 10px;
+  }
+
+  .infos h2 {
+    font-size: 25px;
   }
 
   .infos p {
